refactor: Move routes and controllers to dedicated api package
