# api/errors.go
@@ -1,0 +1,6 @@
+package api
+
+type JSONError struct {
+	Message string `json:"message,omitempty"`
+	Error   string `json:"error,omitempty"`
+} // @Name JSONError
